--- a/package.xml
+++ b/package.xml
@@ -29,5 +29,5 @@
   <run_depend>diagnostic_updater</run_depend>
 
   <!-- Tests -->
-  <test_depend>rostest</test_depend>
+  <build_depend>rostest</build_depend>
 </package>
