--- a/package.xml
+++ b/package.xml
@@ -31,4 +31,6 @@
 
   <!-- Tests -->
   <build_depend>rostest</build_depend>
+  <test_depend>rospy</test_depend>
+  <test_depend>rostopic</test_depend>
 </package>
