--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>twist_mux</name>
   <version>3.1.0</version>
   <description>
@@ -9,40 +9,46 @@
 
   <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>
 
+  <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
   <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
   <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>
 
   <license>CC BY-NC-SA 4.0</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
+  <build_depend>rclcpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>visualization_msgs</build_depend>
   <build_depend>diagnostic_updater</build_depend>
 
-  <run_depend>roscpp</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>visualization_msgs</run_depend>
-  <run_depend>twist_mux_msgs</run_depend>
-  <run_depend>diagnostic_updater</run_depend>
+  <exec_depend>rclcpp</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
+  <exec_depend>twist_mux_msgs</exec_depend>
+  <exec_depend>diagnostic_updater</exec_depend>
 
   <!-- Tests -->
-  <build_depend>rostest</build_depend>
-  <test_depend>rospy</test_depend>
-  <test_depend>rostopic</test_depend>
+  <!--build_depend>rostest</build_depend-->
+  <!--test_depend>rospy</test_depend-->
+  <!--test_depend>rostopic</test_depend-->
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+  <test_depend>launch_testing_ament_cmake</test_depend>
 
   <export>
-      <rosindex>
-          <tags>
-              <tag>control</tag>
-              <tag>twist</tag>
-              <tag>cmd_vel</tag>
-              <tag>multiplex</tag>
-              <tag>mux</tag>
-          </tags>
-      </rosindex>
+    <build_type>ament_cmake</build_type>
+      <!--rosindex-->
+          <!--tags-->
+              <!--tag>control</tag-->
+              <!--tag>twist</tag-->
+              <!--tag>cmd_vel</tag-->
+              <!--tag>multiplex</tag-->
+              <!--tag>mux</tag-->
+          <!--/tags-->
+      <!--/rosindex-->
   </export>
 </package>
