--- a/package.xml
+++ b/package.xml
@@ -24,8 +24,10 @@
   <depend>diagnostic_updater</depend>
 
   <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
-  <test_depend>launch_testing_ament_cmake</test_depend>
+
+  <test_depend>ament_cmake_xmllint</test_depend>
+<!--  <test_depend>ament_lint_common</test_depend>-->
+<!--  <test_depend>launch_testing_ament_cmake</test_depend>-->
 
   <export>
     <build_type>ament_cmake</build_type>
