--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,13 +50,16 @@ install(DIRECTORY include/${PROJECT_NAME}/
 )
 
 if (BUILD_TESTING)
+  #  find_package(ament_cmake_pytest REQUIRED)
+  #  find_package(ament_cmake_xmllint REQUIRED)
+  find_package(ament_lint_auto REQUIRED)
 
-  #find_package(ament_lint_auto REQUIRED)
-  #ament_lint_auto_find_test_dependencies()
+  ament_lint_auto_find_test_dependencies()
+  ament_add_pytest_test('twist_mux' test)
+  #  find_package(launch_testing_ament_cmake)
+  #  add_launch_test(test/test.launch.py)
 
-  find_package(launch_testing_ament_cmake)
-  add_launch_test(test/system.test.py)
-
+  #  ament_add_pytest_test(twist_mux test)
   #find_package(ament_cmake_gtest REQUIRED)
   #ament_add_gtest(test_buffer test/test_buffer.cpp)
   #target_link_libraries(test_buffer ${PROJECT_NAME})
