Initial commit for dashing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,14 @@ cmake_minimum_required(VERSION 3.5)
 
 project(twist_mux)
 
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
@@ -11,42 +19,47 @@ find_package(diagnostic_updater REQUIRED)
 
 include_directories(include)
 
+set(
+  DEPENDENCIES
+  "rclcpp"
+  "std_msgs"
+  "geometry_msgs"
+  "visualization_msgs"
+  "diagnostic_updater"
+)
+
 add_executable(twist_mux
   src/twist_mux.cpp
   src/twist_mux_node.cpp
   src/twist_mux_diagnostics.cpp
-  )
-ament_target_dependencies(twist_mux
-  rclcpp
-  std_msgs
-  geometry_msgs
-  visualization_msgs
-  diagnostic_updater)
+)
+ament_target_dependencies(twist_mux ${DEPENDENCIES})
 
 add_executable(twist_marker
   src/twist_marker.cpp
-  )
-ament_target_dependencies(twist_marker
-  rclcpp
-  std_msgs
-  geometry_msgs
-  visualization_msgs
-  diagnostic_updater)
+)
+ament_target_dependencies(twist_marker ${DEPENDENCIES})
 
-install(TARGETS twist_mux twist_marker
-  RUNTIME DESTINATION lib/${PROJECT_NAME})
+install(
+  TARGETS twist_mux twist_marker
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
 
-install(PROGRAMS scripts/joystick_relay.py
-  DESTINATION bin)
+install(
+  PROGRAMS scripts/joystick_relay.py
+  DESTINATION bin
+)
 
 foreach(dir launch config)
   install(DIRECTORY ${dir}/
     DESTINATION share/${PROJECT_NAME}/${dir})
 endforeach()
 
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION include/${PROJECT_NAME}
-  FILES_MATCHING PATTERN "*.h"
+install(
+  DIRECTORY include/
+  DESTINATION include
 )
 
 if (BUILD_TESTING)
@@ -68,11 +81,7 @@ if (BUILD_TESTING)
 endif()
 
 ament_export_include_directories(include)
-ament_export_dependencies(
-  rclcpp
-  std_msgs
-  geometry_msgs
-  visualization_msgs
-  diagnostic_updater
-)
+
+ament_export_dependencies(${DEPENDENCIES})
+
 ament_package()
