--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>
   <license>CC BY-NC-SA 4.0</license>
 
+  <author email="shlee@gaitech.co.kr">Brighten Lee</author>
   <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
   <author email="efernandez@clearpathrobotics.com">Enrique Fernandez</author>
   <author email="siegfried.gevatter@pal-robotics.com">Siegfried-A. Gevatter Pujals</author>
