--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,10 +47,11 @@ install(
   RUNTIME DESTINATION lib/${PROJECT_NAME}
 )
 
-install(
-  PROGRAMS scripts/joystick_relay.py
-  DESTINATION bin
-)
+# Pending to test ROS2 migration
+#install(
+#  PROGRAMS scripts/joystick_relay.py
+#  DESTINATION lib/${PROJECT_NAME}
+#)
 
 foreach(dir launch config)
   install(DIRECTORY ${dir}/
