--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,9 +63,12 @@ install(
   DESTINATION include
 )
 
-if (BUILD_TESTING)
-  find_package(launch_testing_ament_cmake)
-  add_launch_test(test/system.test.py)
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  ament_lint_auto_find_test_dependencies()
+
+  #  find_package(launch_testing_ament_cmake)
+  #  add_launch_test(test/system.test.py)
 endif()
 
 ament_export_include_directories(include)
