--- a/package.xml
+++ b/package.xml
@@ -8,8 +8,8 @@
       allows to priorize or disable them (locks).
   </description>
 
-  <maintainer email="efernandez@clearpathrobotics.com">Enrique Fernandez</maintainer>
-  <license>CC BY-NC-SA 4.0</license>
+  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
+  <license>Apache License 2.0</license>
 
   <author email="shlee@gaitech.co.kr">Brighten Lee</author>
   <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
@@ -28,7 +28,6 @@
 
   <test_depend>ament_cmake_xmllint</test_depend>
   <test_depend>ament_lint_common</test_depend>
-    <!--  <test_depend>launch_testing_ament_cmake</test_depen  d>-->
   <test_depend>launch</test_depend>
   <test_depend>launch_testing</test_depend>
   <test_depend>launch_testing_ament_cmake</test_depend>
