--- a/package.xml
+++ b/package.xml
@@ -24,8 +24,9 @@
   <depend>visualization_msgs</depend>
   <depend>diagnostic_updater</depend>
 
+  <exec_depend>twist_mux_msgs</exec_depend>
+  
   <test_depend>ament_lint_auto</test_depend>
-
   <test_depend>ament_cmake_xmllint</test_depend>
   <test_depend>ament_lint_common</test_depend>
   <test_depend>launch</test_depend>
