--- a/.github/workflows/rolling-binary-build-main.yml
+++ b/.github/workflows/rolling-binary-build-main.yml
@@ -5,13 +5,13 @@ name: Humble Binary Build - main
 on:
   workflow_dispatch:
     branches:
-      - add-ci
+      - rolling
   pull_request:
     branches:
-      - add-ci
+      - rolling
   push:
     branches:
-      - add-ci
+      - rolling
   schedule:
     # Run every morning to detect flakiness and broken dependencies
     - cron: '03 1 * * *'
@@ -23,4 +23,4 @@ jobs:
       ros_distro: rolling
       ros_repo: main
       upstream_workspace: twist_mux_deps.repos
-      ref_for_scheduled_build: add-ci
+      ref_for_scheduled_build: rolling
